--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
 </head>
   <body class="bg-gray-50 dark:bg-purple-900 text-gray-700 dark:text-gray-300">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
