--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NeoWealth - Invest in Innovation</title>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -63,9 +62,12 @@
   }
 }
 </script>
+<!-- Add Babel Standalone for in-browser JSX/TSX transpilation -->
+<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-gray-50 dark:bg-purple-900 text-gray-700 dark:text-gray-300">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <!-- Change script type to text/babel for Babel to process it -->
+    <script type="text/babel" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
